--- a/src/static/skins/colibris/src/components/users.css
+++ b/src/static/skins/colibris/src/components/users.css
@@ -66,19 +66,8 @@ table#otheruserstable {
 }
 
 @media (max-width: 720px) {
-  #users {
-    bottom: 42px;
-    top: initial !important;
-    height: auto !important;
-  }
-
   #mycolorpicker {
-    width: auto;
-    height: auto;
-    right: 0;
-    bottom: 42px;
     left: initial;
-    top: initial !important;
   }
 }
 
